JumpScript/tests/baselines/reference/FunctionDeclaration6.errors.txt
tests/cases/compiler/FunctionDeclaration6.jump(3,14): error TS2389: Function implementation name must be 'foo'.


==== tests/cases/compiler/FunctionDeclaration6.jump (1 errors) ====
    {
        function foo();
        function bar() { }
                 ~~~
!!! error TS2389: Function implementation name must be 'foo'.
    }